# rmf-rev5-migrator

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
backend/: Makefile  pyproject.toml  requirements-lock.txt
backend/src/rmf_migrator/: __init__.py
backend/src/rmf_migrator/common/: bedrock.py  catalog.py  config.py  csv_safe.py  http.py  limits.py  logging.py  models.py  repository.py  sections.py  storage.py
backend/src/rmf_migrator/docx/: export_docx.py  parser.py
backend/src/rmf_migrator/handlers/: chat.py  coverage.py  create_project.py  deps.py  drafts.py  enqueue_parse.py  export.py  get_job.py  parse_document.py  projects.py  request_upload.py  review.py  worker.py
backend/src/rmf_migrator/services/: chat.py  conversion_matrix.py  coverage.py  decision_log.py  drafting.py  mapping.py  oscal_export.py
backend/tests/: conftest.py  test_bedrock.py  test_catalog.py  test_chat.py  test_conversion_matrix.py  test_coverage.py  test_coverage_handlers.py  test_csv_safe.py  test_decision_log.py  test_draft_worker.py  test_drafting.py  test_drafts.py  test_export_docx.py  test_export_handlers.py  test_export_worker.py  test_handlers.py  test_limits.py  test_logging.py  test_mapping.py  test_models.py  test_oscal_export.py  test_parser.py  test_projects.py  test_repository.py  test_review.py  test_worker.py
docs/: DEPLOYMENT.md  DEVELOPMENT.md  USER_MANUAL.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
(+49 files in other folders)
