[project]
name = "rmf-migrator"
version = "1.1.0"
description = "Convert RMF Rev 4 policy documents to Rev 5 with LLM assistance, self-hosted on AWS."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "boto3>=1.34",
    "python-docx>=1.1",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "moto[s3,dynamodb,sqs]>=5.0",
    "ruff>=0.5",
    # Used only by scripts/fetch_fedramp_baselines.py, which a maintainer runs to
    # regenerate data/baselines/ from FedRAMP's published workbook. Not a runtime
    # dependency: the generated JSON is committed and bundled.
    "openpyxl>=3.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
# S101 (assert) is fine in tests; handled per-file below.

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
